[package]
name = "rano"
version = "0.1.0"
authors = ["Josiah Hilden <jhilden13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ra"

[[bin]]
name = "rano"

[dependencies]
structopt = "*"
log = "0.4"
pretty_env_logger = "0.4"
console = "0.14"
thiserror = "1"
